@@ -28,7 +28,7 @@
  *----------------------------------------------------------------------
  */
 
-void
+int
 XDrawLine(display, d, gc, x1, y1, x2, y2)
     Display* display;
     Drawable d;
@@ -41,7 +41,7 @@ XDrawLine(display, d, gc, x1, y1, x2, y2)
     points[0].y = y1;
     points[1].x = x2;
     points[1].y = y2;
-    XDrawLines(display, d, gc, points, 2, CoordModeOrigin);
+    return XDrawLines(display, d, gc, points, 2, CoordModeOrigin);
 }
 
 /*
@@ -61,7 +61,7 @@ XDrawLine(display, d, gc, x1, y1, x2, y2)
  *----------------------------------------------------------------------
  */
 
-void
+int
 XFillRectangle(display, d, gc, x, y, width, height)
     Display* display;
     Drawable d;
@@ -76,5 +76,5 @@ XFillRectangle(display, d, gc, x, y, width, height)
     rectangle.y = y;
     rectangle.width = width;
     rectangle.height = height;
-    XFillRectangles(display, d, gc, &rectangle, 1);
+    return XFillRectangles(display, d, gc, &rectangle, 1);
 }
